# Neko-Oracle-RWA

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
apps/aggregator/: .env.example  .eslintrc.js  IMPLEMENTATION_SUMMARY.md  README.md  package.json
apps/aggregator/src/: app.module.ts  demo.ts  main.ts
apps/aggregator/src/__mocks__/: raw-price.fixtures.ts
apps/aggregator/src/config/: source-weights.config.ts
apps/aggregator/src/debug/: debug.controller.spec.ts  debug.controller.ts  debug.module.ts  debug.service.ts
apps/aggregator/src/dto/: price-input.dto.ts
apps/aggregator/src/exceptions/: index.ts  normalization.exception.ts
apps/aggregator/src/health/: health.controller.spec.ts  health.controller.ts  health.module.ts
apps/aggregator/src/interfaces/: aggregated-price.interface.ts  aggregation-config.interface.ts  aggregator.interface.ts  index.ts  normalized-price.interface.ts  normalizer.interface.ts
apps/aggregator/src/metrics/: metrics.controller.spec.ts  metrics.controller.ts  metrics.service.spec.ts  (+1 more)
apps/api/: .env.example  README.md  package.json
apps/api/src/: app.controller.spec.ts  app.controller.ts  app.service.ts  main.ts
apps/ingestor/: .env.example  README.md  package.json
apps/ingestor/src/: app.module.ts
contracts/rwa-oracle/: Cargo.toml  README.md
contracts/rwa-oracle/src/: error.rs  lib.rs  rwa_oracle.rs  rwa_types.rs  sep40.rs  test.rs
contracts/rwa-orchestrator /: Cargo.toml  README.md
contracts/rwa-orchestrator /src/: error.rs  lib.rs  orchestrator.rs  test.rs
contracts/rwa-token/: Cargo.toml  README.md
contracts/rwa-token/src/: collateralized.rs  error.rs  index_types.rs  lib.rs  stability_pool.rs  storage.rs  test.rs  token.rs
src/: commit.ts  fetcher.ts  prover.ts  publisher.ts  scheduler.ts
src/circuits/src/: main.nr
(+32 files in other folders)
