[package]
name = "rwa-orchestrator"
version = "0.0.0"
authors = ["Matias Aguilar <aaguilar1x@gmail.com>"]
license = "Apache-2.0"
publish = false
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
rwa-token = { path = "../rwa-token" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[package.metadata.stellar]
contract = true
cargo_inherit = true
